fixed overflow

--- a/www/lessonhome/modules/tutor/profile_content/profile.sass
+++ b/www/lessonhome/modules/tutor/profile_content/profile.sass
@@ -35,7 +35,6 @@ main
 
 
 .info_data
-  overflow: hidden
   padding-bottom: $margin_bottom_box
   .person_box
     float: left
